
## [VERSION] - DATE OF RELEASE (YYYY-MM-DD)
## Please add your change on rollingchangelog.txt.

## [0.9.7a] - DATE OF RELEASE (2016-06-24)

### ADDED: For new features
### ADDED: Addon "Antiglitch"
### ADDED: Polish Language
### ADDED: Nice MTA DayZ DX to Login
### ADDED: Arma II chatbox style
### ADDED: Server Console Output on Global Chat
### ADDED: "Dead Night" Addon
### ADDED : gameplayVariables["waterdamage"] in cfgClient.lua, damage received by a player when it is under water
### ADDED: Anti-teleport detection method to BattlDayZ
### CHANGED: For changes in existing features
### CHANGED: Added Flashlight to Spanish Language
### CHANGED: Moved warning ([PLAYERNAME]'s Account was buggy and has been reset.) to side chat
### CHANGED: Pain now uses setCameraShakeLevel(150) & Added config gameplayVariables["painshakelevel"]
### CHANGED: New animation binds (1 = Salute, 2 = Hands up, 3 = Sit, 5 = Journal)
### CHANGED: playerThirst and playerHunger calculation every 30 seconds instead of onClientRender
### DEPRECATED: For once-stable removed in upcoming releases
### REMOVED: For deprecated features removed in the release it's mentioned in
### FIXED: For all bugs
### FIXED: FPS Drop on some PC.
### FIXED: Anti-teleport detection
### FIXED: Fixed Polish Language Typo
### FIXED: Ammo bug
### FIXED: Patrol Pack bug
### FIXED: Black & White shader not loading
### FIXED : The player don't get damage if are submerged for along time
### SECURITY: To invite users to upgrade in case of vulnerabilities
### LANGUAGE: Romanian is now available.

# - #
## [0.9.5a] - 2015-08-19
### ADDED: New status effects: Sepsis, Infection & Unconsciousness
### ADDED: New Items: Range Finder, Epi-Pen
### ADDED: Crosshair integration
### ADDED: Difficulty options (Normal, Veteran & Hardcore)
### ADDED: Viral zombie (24000 blood, greenish skin)
### ADDED: Empty Gas Canister to industrial loot table
### ADDED: Tent to supermarket loot table
### ADDED: Range Finder to military loot table