@@ -13,6 +13,7 @@ This changelog lists all changes made to MTA DayZ. It adheres to the following f
 ### ADDED: Arma II chatbox style
 ### ADDED: Server Console Output on Global Chat
 ### ADDED: "Dead Night" Addon
+### ADDED: Hide Body now available
 ### ADDED : gameplayVariables["waterdamage"] in cfgClient.lua, damage received by a player when it is under water
 ### ADDED: Anti-teleport detection method to BattlDayZ
 ### CHANGED: For changes in existing features
@@ -21,6 +22,8 @@ This changelog lists all changes made to MTA DayZ. It adheres to the following f
 ### CHANGED: Pain now uses setCameraShakeLevel(150) & Added config gameplayVariables["painshakelevel"]
 ### CHANGED: New animation binds (1 = Salute, 2 = Hands up, 3 = Sit, 5 = Journal)
 ### CHANGED: playerThirst and playerHunger calculation every 30 seconds instead of onClientRender
+### CHANGED: The night is far less dark
+### CHANGED: The timer "night_check" is now set to 4 seconds.
 ### DEPRECATED: For once-stable removed in upcoming releases
 ### REMOVED: For deprecated features removed in the release it's mentioned in
 ### FIXED: For all bugs
